_generated-doc/1.11/config/quarkus-vertx-http.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-http_configuration]]link:#quarkus-vertx-http_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.root-path]]`link:#quarkus-vertx-http_quarkus.http.root-path[quarkus.http.root-path]`

[.description]
--
The HTTP root path. All web content will be served relative to this root path.
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.basic]]`link:#quarkus-vertx-http_quarkus.http.auth.basic[quarkus.http.auth.basic]`

[.description]
--
If basic auth should be enabled. If both basic and form auth is enabled then basic auth will be enabled in silent mode. If no authentication mechanisms are configured basic auth is the default.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.form.enabled]]`link:#quarkus-vertx-http_quarkus.http.auth.form.enabled[quarkus.http.auth.form.enabled]`

[.description]
--
If form authentication is enabled
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.form.login-page]]`link:#quarkus-vertx-http_quarkus.http.auth.form.login-page[quarkus.http.auth.form.login-page]`

[.description]
--
The login page
--|string 
|`/login.html`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.form.error-page]]`link:#quarkus-vertx-http_quarkus.http.auth.form.error-page[quarkus.http.auth.form.error-page]`

[.description]
--
The error page
--|string 
|`/error.html`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.form.landing-page]]`link:#quarkus-vertx-http_quarkus.http.auth.form.landing-page[quarkus.http.auth.form.landing-page]`

[.description]
--
The landing page to redirect to if there is no saved page to redirect back to
--|string 
|`/index.html`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.form.redirect-after-login]]`link:#quarkus-vertx-http_quarkus.http.auth.form.redirect-after-login[quarkus.http.auth.form.redirect-after-login]`

[.description]
--
Option to disable redirect to landingPage if there is no saved page to redirect back to. Form Auth POST is followed by redirect to landingPage by default.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.form.timeout]]`link:#quarkus-vertx-http_quarkus.http.auth.form.timeout[quarkus.http.auth.form.timeout]`

[.description]
--
The inactivity (idle) timeout When inactivity timeout is reached, cookie is not renewed and a new login is enforced.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`PT30M`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.form.new-cookie-interval]]`link:#quarkus-vertx-http_quarkus.http.auth.form.new-cookie-interval[quarkus.http.auth.form.new-cookie-interval]`

[.description]
--
How old a cookie can get before it will be replaced with a new cookie with an updated timeout, also referred to as "renewal-timeout". Note that smaller values will result in slightly more server load (as new encrypted cookies will be generated more often), however larger values affect the inactivity timeout as the timeout is set when a cookie is generated. For example if this is set to 10 minutes, and the inactivity timeout is 30m, if a users last request is when the cookie is 9m old then the actual timeout will happen 21m after the last request, as the timeout is only refreshed when a new cookie is generated. In other words no timeout is tracked on the server side; the timestamp is encoded and encrypted in the cookie itself and it is decrypted and parsed with each request.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`PT1M`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.form.cookie-name]]`link:#quarkus-vertx-http_quarkus.http.auth.form.cookie-name[quarkus.http.auth.form.cookie-name]`

[.description]
--
The cookie that is used to store the persistent session
--|string 
|`quarkus-credential`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.realm]]`link:#quarkus-vertx-http_quarkus.http.auth.realm[quarkus.http.auth.realm]`

[.description]
--
The authentication realm
--|string 
|`Quarkus`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.proactive]]`link:#quarkus-vertx-http_quarkus.http.auth.proactive[quarkus.http.auth.proactive]`

[.description]
--
If this is true and credentials are present then a user will always be authenticated before the request progresses. If this is false then an attempt will only be made to authenticate the user if a permission check is performed or the current user is required for some other reason.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.ssl.client-auth]]`link:#quarkus-vertx-http_quarkus.http.ssl.client-auth[quarkus.http.ssl.client-auth]`

[.description]
--
Configures the engine to require/request client authentication. NONE, REQUEST, REQUIRED
--|`none`, `request`, `required` 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.virtual]]`link:#quarkus-vertx-http_quarkus.http.virtual[quarkus.http.virtual]`

[.description]
--
If this is true then only a virtual channel will be set up for vertx web. We have this switch for testing purposes.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.non-application-root-path]]`link:#quarkus-vertx-http_quarkus.http.non-application-root-path[quarkus.http.non-application-root-path]`

[.description]
--
A common root path for non-application endpoints. Various extension-provided endpoints such as metrics, health,
and openapi are deployed under this path by default.

* Relative path (Default, `q`) ->
Non-application endpoints will be served from
`${quarkus.http.root-path}/${quarkus.http.non-application-root-path}`.
* Absolute path (`/q`) ->
Non-application endpoints will be served from the specified path.
* `${quarkus.http.root-path}` -> Setting this path to the same value as HTTP root path disables
this root path. All extension-provided endpoints will be served from `${quarkus.http.root-path}`.
--|string 
|`q`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.redirect-to-non-application-root-path]]`link:#quarkus-vertx-http_quarkus.http.redirect-to-non-application-root-path[quarkus.http.redirect-to-non-application-root-path]`

[.description]
--
Provide redirect endpoints for extension-provided endpoints existing prior to Quarkus 1.11.
This will trigger HTTP 301 Redirects for the following:

* `/graphql-ui`
* `/health`
* `/health-ui`
* `/metrics`
* `/openapi`
* `/swagger-ui`

Default is `true` for Quarkus 1.11.x to facilitate transition to name-spaced URIs using
`${quarkus.http.non-application-root-path}`.

Quarkus 1.13 will change the default to `false`,
and the config item will be removed in Quarkus 2.0.
--|boolean 
|`true`


a| [[quarkus-vertx-http_quarkus.http.cors]]`link:#quarkus-vertx-http_quarkus.http.cors[quarkus.http.cors]`

[.description]
--
Enable the CORS filter.
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.port]]`link:#quarkus-vertx-http_quarkus.http.port[quarkus.http.port]`

[.description]
--
The HTTP port
--|int 
|`8080`


a| [[quarkus-vertx-http_quarkus.http.test-port]]`link:#quarkus-vertx-http_quarkus.http.test-port[quarkus.http.test-port]`

[.description]
--
The HTTP port used to run tests
--|int 
|`8081`


a| [[quarkus-vertx-http_quarkus.http.host]]`link:#quarkus-vertx-http_quarkus.http.host[quarkus.http.host]`

[.description]
--
The HTTP host In dev/test mode this defaults to localhost, in prod mode this defaults to 0.0.0.0 Defaulting to 0.0.0.0 makes it easier to deploy Quarkus to container, however it is not suitable for dev/test mode as other people on the network can connect to your development machine.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-vertx-http_quarkus.http.host-enabled]]`link:#quarkus-vertx-http_quarkus.http.host-enabled[quarkus.http.host-enabled]`

[.description]
--
Enable listening to host:port
--|boolean 
|`true`


a| [[quarkus-vertx-http_quarkus.http.ssl-port]]`link:#quarkus-vertx-http_quarkus.http.ssl-port[quarkus.http.ssl-port]`

[.description]
--
The HTTPS port
--|int 
|`8443`


a| [[quarkus-vertx-http_quarkus.http.test-ssl-port]]`link:#quarkus-vertx-http_quarkus.http.test-ssl-port[quarkus.http.test-ssl-port]`

[.description]
--
The HTTPS port used to run tests
--|int 
|`8444`


a| [[quarkus-vertx-http_quarkus.http.insecure-requests]]`link:#quarkus-vertx-http_quarkus.http.insecure-requests[quarkus.http.insecure-requests]`

[.description]
--
If insecure (i.e. http rather than https) requests are allowed. If this is `enabled` then http works as normal. `redirect` will still open the http port, but all requests will be redirected to the HTTPS port. `disabled` will prevent the HTTP port from opening at all.
--|`enabled`, `redirect`, `disabled` 
|`enabled`


a| [[quarkus-vertx-http_quarkus.http.http2]]`link:#quarkus-vertx-http_quarkus.http.http2[quarkus.http.http2]`

[.description]
--
If this is true (the default) then HTTP/2 will be enabled. Note that for browsers to be able to use it HTTPS must be enabled, and you must be running on JDK11 or above, as JDK8 does not support ALPN.
--|boolean 
|`true`


a| [[quarkus-vertx-http_quarkus.http.cors.origins]]`link:#quarkus-vertx-http_quarkus.http.cors.origins[quarkus.http.cors.origins]`

[.description]
--
Origins allowed for CORS Comma separated list of valid URLs. ex: http://www.quarkus.io,http://localhost:3000 The filter allows any origin if this is not set. default: returns any requested origin as valid
--|list of string 
|


a| [[quarkus-vertx-http_quarkus.http.cors.methods]]`link:#quarkus-vertx-http_quarkus.http.cors.methods[quarkus.http.cors.methods]`

[.description]
--
HTTP methods allowed for CORS Comma separated list of valid methods. ex: GET,PUT,POST The filter allows any method if this is not set. default: returns any requested method as valid
--|list of string 
|


a| [[quarkus-vertx-http_quarkus.http.cors.headers]]`link:#quarkus-vertx-http_quarkus.http.cors.headers[quarkus.http.cors.headers]`

[.description]
--
HTTP headers allowed for CORS Comma separated list of valid headers. ex: X-Custom,Content-Disposition The filter allows any header if this is not set. default: returns any requested header as valid
--|list of string 
|


a| [[quarkus-vertx-http_quarkus.http.cors.exposed-headers]]`link:#quarkus-vertx-http_quarkus.http.cors.exposed-headers[quarkus.http.cors.exposed-headers]`

[.description]
--
HTTP headers exposed in CORS Comma separated list of valid headers. ex: X-Custom,Content-Disposition default: empty
--|list of string 
|


a| [[quarkus-vertx-http_quarkus.http.cors.access-control-max-age]]`link:#quarkus-vertx-http_quarkus.http.cors.access-control-max-age[quarkus.http.cors.access-control-max-age]`

[.description]
--
The `Access-Control-Max-Age` response header value indicating how long the results of a pre-flight request can be cached.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-vertx-http_quarkus.http.cors.access-control-allow-credentials]]`link:#quarkus-vertx-http_quarkus.http.cors.access-control-allow-credentials[quarkus.http.cors.access-control-allow-credentials]`

[.description]
--
The `Access-Control-Allow-Credentials` header is used to tell the browsers to expose the response to front-end JavaScript code when the request’s credentials mode Request.credentials is “include”. The value of this header will default to `true` if `quarkus.http.cors.origins` property is set and there is a match with the precise `Origin` header and that header is not '++*++'.
--|boolean 
|


a| [[quarkus-vertx-http_quarkus.http.ssl.certificate.file]]`link:#quarkus-vertx-http_quarkus.http.ssl.certificate.file[quarkus.http.ssl.certificate.file]`

[.description]
--
The file path to a server certificate or certificate chain in PEM format.
--|path 
|


a| [[quarkus-vertx-http_quarkus.http.ssl.certificate.key-file]]`link:#quarkus-vertx-http_quarkus.http.ssl.certificate.key-file[quarkus.http.ssl.certificate.key-file]`

[.description]
--
The file path to the corresponding certificate private key file in PEM format.
--|path 
|


a| [[quarkus-vertx-http_quarkus.http.ssl.certificate.key-store-file]]`link:#quarkus-vertx-http_quarkus.http.ssl.certificate.key-store-file[quarkus.http.ssl.certificate.key-store-file]`

[.description]
--
An optional key store which holds the certificate information instead of specifying separate files.
--|path 
|


a| [[quarkus-vertx-http_quarkus.http.ssl.certificate.key-store-file-type]]`link:#quarkus-vertx-http_quarkus.http.ssl.certificate.key-store-file-type[quarkus.http.ssl.certificate.key-store-file-type]`

[.description]
--
An optional parameter to specify type of the key store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-vertx-http_quarkus.http.ssl.certificate.key-store-provider]]`link:#quarkus-vertx-http_quarkus.http.ssl.certificate.key-store-provider[quarkus.http.ssl.certificate.key-store-provider]`

[.description]
--
An optional parameter to specify a provider of the key store file. If not given, the provider is automatically detected based on the key store file type.
--|string 
|


a| [[quarkus-vertx-http_quarkus.http.ssl.certificate.key-store-password]]`link:#quarkus-vertx-http_quarkus.http.ssl.certificate.key-store-password[quarkus.http.ssl.certificate.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.
--|string 
|`password`


a| [[quarkus-vertx-http_quarkus.http.ssl.certificate.trust-store-file]]`link:#quarkus-vertx-http_quarkus.http.ssl.certificate.trust-store-file[quarkus.http.ssl.certificate.trust-store-file]`

[.description]
--
An optional trust store which holds the certificate information of the certificates to trust
--|path 
|


a| [[quarkus-vertx-http_quarkus.http.ssl.certificate.trust-store-file-type]]`link:#quarkus-vertx-http_quarkus.http.ssl.certificate.trust-store-file-type[quarkus.http.ssl.certificate.trust-store-file-type]`

[.description]
--
An optional parameter to specify type of the trust store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-vertx-http_quarkus.http.ssl.certificate.trust-store-provider]]`link:#quarkus-vertx-http_quarkus.http.ssl.certificate.trust-store-provider[quarkus.http.ssl.certificate.trust-store-provider]`

[.description]
--
An optional parameter to specify a provider of the trust store file. If not given, the provider is automatically detected based on the trust store file type.
--|string 
|


a| [[quarkus-vertx-http_quarkus.http.ssl.certificate.trust-store-password]]`link:#quarkus-vertx-http_quarkus.http.ssl.certificate.trust-store-password[quarkus.http.ssl.certificate.trust-store-password]`

[.description]
--
A parameter to specify the password of the trust store file.
--|string 
|


a| [[quarkus-vertx-http_quarkus.http.ssl.cipher-suites]]`link:#quarkus-vertx-http_quarkus.http.ssl.cipher-suites[quarkus.http.ssl.cipher-suites]`

[.description]
--
The cipher suites to use. If none is given, a reasonable default is selected.
--|list of string 
|


a| [[quarkus-vertx-http_quarkus.http.ssl.protocols]]`link:#quarkus-vertx-http_quarkus.http.ssl.protocols[quarkus.http.ssl.protocols]`

[.description]
--
The list of protocols to explicitly enable.
--|list of string 
|`TLSv1.3,TLSv1.2`


a| [[quarkus-vertx-http_quarkus.http.io-threads]]`link:#quarkus-vertx-http_quarkus.http.io-threads[quarkus.http.io-threads]`

[.description]
--
The number if IO threads used to perform IO. This will be automatically set to a reasonable value based on the number of CPU cores if it is not provided. If this is set to a higher value than the number of Vert.x event loops then it will be capped at the number of event loops. In general this should be controlled by setting quarkus.vertx.event-loops-pool-size, this setting should only be used if you want to limit the number of HTTP io threads to a smaller number than the total number of IO threads.
--|int 
|


a| [[quarkus-vertx-http_quarkus.http.limits.max-header-size]]`link:#quarkus-vertx-http_quarkus.http.limits.max-header-size[quarkus.http.limits.max-header-size]`

[.description]
--
The maximum length of all headers.
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`20K`


a| [[quarkus-vertx-http_quarkus.http.limits.max-body-size]]`link:#quarkus-vertx-http_quarkus.http.limits.max-body-size[quarkus.http.limits.max-body-size]`

[.description]
--
The maximum size of a request body.
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10240K`


a| [[quarkus-vertx-http_quarkus.http.limits.max-chunk-size]]`link:#quarkus-vertx-http_quarkus.http.limits.max-chunk-size[quarkus.http.limits.max-chunk-size]`

[.description]
--
The max HTTP chunk size
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`8192`


a| [[quarkus-vertx-http_quarkus.http.limits.max-initial-line-length]]`link:#quarkus-vertx-http_quarkus.http.limits.max-initial-line-length[quarkus.http.limits.max-initial-line-length]`

[.description]
--
The maximum length of the initial line (e.g. `"GET / HTTP/1.0"`).
--|int 
|`4096`


a| [[quarkus-vertx-http_quarkus.http.idle-timeout]]`link:#quarkus-vertx-http_quarkus.http.idle-timeout[quarkus.http.idle-timeout]`

[.description]
--
Http connection idle timeout
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30M`


a| [[quarkus-vertx-http_quarkus.http.read-timeout]]`link:#quarkus-vertx-http_quarkus.http.read-timeout[quarkus.http.read-timeout]`

[.description]
--
Http connection read timeout for blocking IO. This is the maximum amount of time a thread will wait for data, before an IOException will be thrown and the connection closed.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`60S`


a| [[quarkus-vertx-http_quarkus.http.body.handle-file-uploads]]`link:#quarkus-vertx-http_quarkus.http.body.handle-file-uploads[quarkus.http.body.handle-file-uploads]`

[.description]
--
Whether the files sent using `multipart/form-data` will be stored locally. 
 If `true`, they will be stored in `quarkus.http.body-handler.uploads-directory` and will be made available via `io.vertx.ext.web.RoutingContext.fileUploads()`. Otherwise, the the files sent using `multipart/form-data` will not be stored locally, and `io.vertx.ext.web.RoutingContext.fileUploads()` will always return an empty collection. Note that even with this option being set to `false`, the `multipart/form-data` requests will be accepted.
--|boolean 
|`true`


a| [[quarkus-vertx-http_quarkus.http.body.uploads-directory]]`link:#quarkus-vertx-http_quarkus.http.body.uploads-directory[quarkus.http.body.uploads-directory]`

[.description]
--
The directory where the files sent using `multipart/form-data` should be stored. 
 Either an absolute path or a path relative to the current directory of the application process.
--|string 
|`file-uploads`


a| [[quarkus-vertx-http_quarkus.http.body.merge-form-attributes]]`link:#quarkus-vertx-http_quarkus.http.body.merge-form-attributes[quarkus.http.body.merge-form-attributes]`

[.description]
--
Whether the form attributes should be added to the request parameters. 
 If `true`, the form attributes will be added to the request parameters; otherwise the form parameters will not be added to the request parameters
--|boolean 
|`true`


a| [[quarkus-vertx-http_quarkus.http.body.delete-uploaded-files-on-end]]`link:#quarkus-vertx-http_quarkus.http.body.delete-uploaded-files-on-end[quarkus.http.body.delete-uploaded-files-on-end]`

[.description]
--
Whether the uploaded files should be removed after serving the request. 
 If `true` the uploaded files stored in `quarkus.http.body-handler.uploads-directory` will be removed after handling the request. Otherwise the files will be left there forever.
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.body.preallocate-body-buffer]]`link:#quarkus-vertx-http_quarkus.http.body.preallocate-body-buffer[quarkus.http.body.preallocate-body-buffer]`

[.description]
--
Whether the body buffer should pre-allocated based on the `Content-Length` header value. 
 If `true` the body buffer is pre-allocated according to the size read from the `Content-Length` header. Otherwise the body buffer is pre-allocated to 1KB, and is resized dynamically
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.auth.session.encryption-key]]`link:#quarkus-vertx-http_quarkus.http.auth.session.encryption-key[quarkus.http.auth.session.encryption-key]`

[.description]
--
The encryption key that is used to store persistent logins (e.g. for form auth). Logins are stored in a persistent cookie that is encrypted with AES-256 using a key derived from a SHA-256 hash of the key that is provided here. If no key is provided then an in-memory one will be generated, this will change on every restart though so it is not suitable for production environments. This must be more than 16 characters long for security reasons
--|string 
|


a| [[quarkus-vertx-http_quarkus.http.so-reuse-port]]`link:#quarkus-vertx-http_quarkus.http.so-reuse-port[quarkus.http.so-reuse-port]`

[.description]
--
Enable socket reuse port (linux/macOs native transport only)
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.tcp-quick-ack]]`link:#quarkus-vertx-http_quarkus.http.tcp-quick-ack[quarkus.http.tcp-quick-ack]`

[.description]
--
Enable tcp quick ack (linux native transport only)
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.tcp-cork]]`link:#quarkus-vertx-http_quarkus.http.tcp-cork[quarkus.http.tcp-cork]`

[.description]
--
Enable tcp cork (linux native transport only)
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.tcp-fast-open]]`link:#quarkus-vertx-http_quarkus.http.tcp-fast-open[quarkus.http.tcp-fast-open]`

[.description]
--
Enable tcp fast open (linux native transport only)
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.domain-socket]]`link:#quarkus-vertx-http_quarkus.http.domain-socket[quarkus.http.domain-socket]`

[.description]
--
Path to a unix domain socket
--|string 
|`/var/run/io.quarkus.app.socket`


a| [[quarkus-vertx-http_quarkus.http.domain-socket-enabled]]`link:#quarkus-vertx-http_quarkus.http.domain-socket-enabled[quarkus.http.domain-socket-enabled]`

[.description]
--
Enable listening to host:port
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.record-request-start-time]]`link:#quarkus-vertx-http_quarkus.http.record-request-start-time[quarkus.http.record-request-start-time]`

[.description]
--
If this is true then the request start time will be recorded to enable logging of total request time. This has a small performance penalty, so is disabled by default.
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.access-log.enabled]]`link:#quarkus-vertx-http_quarkus.http.access-log.enabled[quarkus.http.access-log.enabled]`

[.description]
--
If access logging is enabled. By default this will log via the standard logging facility
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.access-log.pattern]]`link:#quarkus-vertx-http_quarkus.http.access-log.pattern[quarkus.http.access-log.pattern]`

[.description]
--
The access log pattern.

If this is the string `common`, `combined` or `long` then this will use one of the specified named formats:

- common: `%h %l %u %t "%r" %s %b`
- combined: `%h %l %u %t "%r" %s %b "%{i,Referer}" "%{i,User-Agent}"`
- long: `%r\n%{ALL_REQUEST_HEADERS}`

Otherwise consult the Quarkus documentation for the full list of variables that can be used.
--|string 
|`common`


a| [[quarkus-vertx-http_quarkus.http.access-log.log-to-file]]`link:#quarkus-vertx-http_quarkus.http.access-log.log-to-file[quarkus.http.access-log.log-to-file]`

[.description]
--
If logging should be done to a separate file.
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.access-log.base-file-name]]`link:#quarkus-vertx-http_quarkus.http.access-log.base-file-name[quarkus.http.access-log.base-file-name]`

[.description]
--
The access log file base name, defaults to 'quarkus' which will give a log file name of 'quarkus.log'.
--|string 
|`quarkus`


a| [[quarkus-vertx-http_quarkus.http.access-log.log-directory]]`link:#quarkus-vertx-http_quarkus.http.access-log.log-directory[quarkus.http.access-log.log-directory]`

[.description]
--
The log directory to use when logging access to a file If this is not set then the current working directory is used.
--|string 
|


a| [[quarkus-vertx-http_quarkus.http.access-log.log-suffix]]`link:#quarkus-vertx-http_quarkus.http.access-log.log-suffix[quarkus.http.access-log.log-suffix]`

[.description]
--
The log file suffix
--|string 
|`.log`


a| [[quarkus-vertx-http_quarkus.http.access-log.category]]`link:#quarkus-vertx-http_quarkus.http.access-log.category[quarkus.http.access-log.category]`

[.description]
--
The log category to use if logging is being done via the standard log mechanism (i.e. if base-file-name is empty).
--|string 
|`io.quarkus.http.access-log`


a| [[quarkus-vertx-http_quarkus.http.access-log.rotate]]`link:#quarkus-vertx-http_quarkus.http.access-log.rotate[quarkus.http.access-log.rotate]`

[.description]
--
If the log should be rotated daily
--|boolean 
|`true`


a| [[quarkus-vertx-http_quarkus.http.enable-compression]]`link:#quarkus-vertx-http_quarkus.http.enable-compression[quarkus.http.enable-compression]`

[.description]
--
If responses should be compressed. Note that this will attempt to compress all responses, to avoid compressing already compressed content (such as images) you need to set the following header: Content-Encoding: identity Which will tell vert.x not to compress the response.
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.proxy.proxy-address-forwarding]]`link:#quarkus-vertx-http_quarkus.http.proxy.proxy-address-forwarding[quarkus.http.proxy.proxy-address-forwarding]`

[.description]
--
If this is true then the address, scheme etc will be set from headers forwarded by the proxy server, such as `X-Forwarded-For`. This should only be set if you are behind a proxy that sets these headers.
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.proxy.allow-forwarded]]`link:#quarkus-vertx-http_quarkus.http.proxy.allow-forwarded[quarkus.http.proxy.allow-forwarded]`

[.description]
--
If this is true and proxy address forwarding is enabled then the standard `Forwarded` header will be used, rather than the more common but not standard `X-Forwarded-For`.
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.proxy.enable-forwarded-host]]`link:#quarkus-vertx-http_quarkus.http.proxy.enable-forwarded-host[quarkus.http.proxy.enable-forwarded-host]`

[.description]
--
Enable override the received request's host through a forwarded host header.
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.proxy.forwarded-host-header]]`link:#quarkus-vertx-http_quarkus.http.proxy.forwarded-host-header[quarkus.http.proxy.forwarded-host-header]`

[.description]
--
Configure the forwarded host header to be used if override enabled.
--|string 
|`X-Forwarded-Host`


a| [[quarkus-vertx-http_quarkus.http.proxy.enable-forwarded-prefix]]`link:#quarkus-vertx-http_quarkus.http.proxy.enable-forwarded-prefix[quarkus.http.proxy.enable-forwarded-prefix]`

[.description]
--
Enable prefix the received request's path with a forwarded prefix header.
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.proxy.forwarded-prefix-header]]`link:#quarkus-vertx-http_quarkus.http.proxy.forwarded-prefix-header[quarkus.http.proxy.forwarded-prefix-header]`

[.description]
--
Configure the forwarded prefix header to be used if prefixing enabled.
--|string 
|`X-Forwarded-Prefix`


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.permission.-permissions-.enabled]]`link:#quarkus-vertx-http_quarkus.http.auth.permission.-permissions-.enabled[quarkus.http.auth.permission."permissions".enabled]`

[.description]
--
Determines whether the entire permission set is enabled, or not. By default, if the permission set is defined, it is enabled.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.permission.-permissions-.policy]]`link:#quarkus-vertx-http_quarkus.http.auth.permission.-permissions-.policy[quarkus.http.auth.permission."permissions".policy]`

[.description]
--
The HTTP policy that this permission set is linked to. There are 3 built in policies: permit, deny and authenticated. Role based policies can be defined, and extensions can add their own policies.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.permission.-permissions-.methods]]`link:#quarkus-vertx-http_quarkus.http.auth.permission.-permissions-.methods[quarkus.http.auth.permission."permissions".methods]`

[.description]
--
The methods that this permission set applies to. If this is not set then they apply to all methods. Note that if a request matches any path from any permission set, but does not match the constraint due to the method not being listed then the request will be denied. Method specific permissions take precedence over matches that do not have any methods set. This means that for example if Quarkus is configured to allow GET and POST requests to /admin to and no other permissions are configured PUT requests to /admin will be denied.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.permission.-permissions-.paths]]`link:#quarkus-vertx-http_quarkus.http.auth.permission.-permissions-.paths[quarkus.http.auth.permission."permissions".paths]`

[.description]
--
The paths that this permission check applies to. If the path ends in /++*++ then this is treated as a path prefix, otherwise it is treated as an exact match. Matches are done on a length basis, so the most specific path match takes precedence. If multiple permission sets match the same path then explicit methods matches take precedence over over matches without methods set, otherwise the most restrictive permissions are applied.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus.http.auth.policy.-role-policy-.roles-allowed]]`link:#quarkus-vertx-http_quarkus.http.auth.policy.-role-policy-.roles-allowed[quarkus.http.auth.policy."role-policy".roles-allowed]`

[.description]
--
The roles that are allowed to access resources protected by this policy
--|list of string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-vertx-http_quarkus.http.same-site-cookie.-same-site-cookie-.case-sensitive]]`link:#quarkus-vertx-http_quarkus.http.same-site-cookie.-same-site-cookie-.case-sensitive[quarkus.http.same-site-cookie."same-site-cookie".case-sensitive]`

[.description]
--
If the cookie pattern is case sensitive
--|boolean 
|`false`


a| [[quarkus-vertx-http_quarkus.http.same-site-cookie.-same-site-cookie-.value]]`link:#quarkus-vertx-http_quarkus.http.same-site-cookie.-same-site-cookie-.value[quarkus.http.same-site-cookie."same-site-cookie".value]`

[.description]
--
The value to set in the samesite attribute
--|`none`, `strict`, `lax` 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-vertx-http_quarkus.http.same-site-cookie.-same-site-cookie-.enable-client-checker]]`link:#quarkus-vertx-http_quarkus.http.same-site-cookie.-same-site-cookie-.enable-client-checker[quarkus.http.same-site-cookie."same-site-cookie".enable-client-checker]`

[.description]
--
Some User Agents break when sent SameSite=None, this will detect them and avoid sending the value
--|boolean 
|`true`


a| [[quarkus-vertx-http_quarkus.http.same-site-cookie.-same-site-cookie-.add-secure-for-none]]`link:#quarkus-vertx-http_quarkus.http.same-site-cookie.-same-site-cookie-.add-secure-for-none[quarkus.http.same-site-cookie."same-site-cookie".add-secure-for-none]`

[.description]
--
If this is true then the 'secure' attribute will automatically be sent on cookies with a SameSite attribute of None.
--|boolean 
|`true`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]

[NOTE]
[[memory-size-note-anchor]]
.About the MemorySize format
====
A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.
If no suffix is given, assume bytes.
====
